# json_rpc

./: archive_header.mako  archive_source.mako  cereal_header.mako  cereal_ts.mako  generate.py  name_convert.py  parse_graphio.py  parse_header.py  readme.md  rpc_header.mako  rpc_source.mako  template.mako  testtemplates.py
native/: CMakeLists.txt
native/src/: conversion.cpp  converstion.h  graph_time.h  json_archive.cpp  json_archive.h  main.cpp  render_data.cpp  render_data.gen.h  render_data.gen.ts  render_data.gen2.cpp  render_data.gen2.h  render_data.gen2.ts  render_data.h  server.cpp  server.gen.cpp  server.gen.h  server.h  ts_helpers.ts
